Fixed so it works using mvn javafx:run